--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,9 @@ init:
 - ps: cinst jdk8
 - ps: >-
     $base = "https://raw.githubusercontent.com/technomancy/leiningen/"
+
     $lein = $base + "stable/bin/lein.bat"
+
     (new-object net.webclient).DownloadFile($lein, 'lein.bat')
 - lein self-install
 
@@ -10,6 +12,6 @@ install:
 - lein deps
 
 test_script:
-- lein do clean, test, jar
+- "lein do clean, test, jar"
 
 build: off
