--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,3 +15,16 @@ test_script:
 - "lein do clean, test, jar"
 
 build: off
+
+deploy:
+  release: myproduct-v$(appveyor_build_version)
+  description: 'Release description'
+  provider: GitHub
+  auth_token:
+    secure: '14a461ec28061d6589c313ba373d8ec4e63c0fec' # your encrypted token from GitHub
+  artifact: /target/.*\.jar/            # upload all NuGet packages to release assets
+  draft: false
+  prerelease: false
+  on:
+    branch: master                 # release from master branch only
+    appveyor_repo_tag: true        # deploy on tag push only
